--- a/notebooks/first_model_explo.ipynb
+++ b/notebooks/first_model_explo.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_single_raw = pd.read_csv(\"dataset_single.csv\")"
+    "df_single_raw = pd.read_csv(\"../dataset_single.csv\")"
    ]
   },
   {
@@ -663,13 +663,6 @@
     "model = make_simple_model()\n",
     "history = model.fit(tf_train_dataset, validation_data=tf_val_dataset, epochs=50)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1246,7 +1239,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b9523be2c5a0c2bad1a3f640ba7683ed79762fe800620d3f2faaf3e806b8eb3d"
+   "hash": "5f2e503e010f1432c511fde9456a8b3c2fa1537f855b7aa74fd92db58b4b082e"
   },
   "kernelspec": {
    "display_name": "Python 3.8.13 ('lbc')",
