--- a/notebooks/second_model_explo.ipynb
+++ b/notebooks/second_model_explo.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"dataset_single.csv\")"
+    "df = pd.read_csv(\"../dataset_single.csv\")"
    ]
   },
   {
