Added a bit of comments

--- a/notebooks/second_model_embeddings.ipynb
+++ b/notebooks/second_model_embeddings.ipynb
@@ -1,21 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "inputWidgets": {},
-          "nuid": "f6602ee5-3722-4961-ac0f-e6297151a222",
-          "showTitle": false,
-          "title": ""
-        },
-        "id": "fXzzKtJKVs5t"
-      },
-      "source": [
-        "# HuggingFace"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -25,7 +10,14 @@
       "source": [
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "from datasets import Dataset\n",
+        "import os\n",
+        "from transformers import AutoTokenizer, TFAutoModelForSequenceClassification\n",
+        "from transformers import DataCollatorWithPadding\n",
+        "from tensorflow.keras.optimizers.schedules import PolynomialDecay\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "import tensorflow as tf"
       ]
     },
     {
@@ -47,6 +39,7 @@
       },
       "outputs": [],
       "source": [
+        "# invert class numbers to use keras metrics\n",
         "df[\"P1\"] = (df[\"P1\"]!=1).astype(int)"
       ]
     },
@@ -69,33 +62,8 @@
       },
       "outputs": [],
       "source": [
-        "train_df, test_df = train_test_split(df, test_size=0.1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "inputWidgets": {},
-          "nuid": "ade89c1e-1276-4205-8cb3-a830cd432b30",
-          "showTitle": false,
-          "title": ""
-        },
-        "id": "7i11O3pZVs5u"
-      },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\J0545269\\Miniconda3\\envs\\lbc\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n"
-          ]
-        }
-      ],
-      "source": [
-        "from datasets import Dataset\n",
+        "train_df, test_df = train_test_split(df, test_size=0.1)\n",
+        "# convert to huggingFace datasets\n",
         "train_dataset = Dataset.from_pandas(train_df)\n",
         "test_dataset = Dataset.from_pandas(test_df)"
       ]
@@ -106,8 +74,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import os\n",
-        "os.environ[\"CURL_CA_BUNDLE\"]=\"\""
+        "# deal with proxy Total\n",
+        "os.environ[\"CURL_CA_BUNDLE\"] = \"\""
       ]
     },
     {
@@ -151,11 +119,8 @@
         }
       ],
       "source": [
-        "from transformers import AutoTokenizer, TFAutoModelForSequenceClassification\n",
         "checkpoint = \"mrm8488/chEMBL26_smiles_v2\"\n",
-        "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
-        "# num_labels?\n",
-        "# model = TFAutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)"
+        "tokenizer = AutoTokenizer.from_pretrained(checkpoint)"
       ]
     },
     {
@@ -236,40 +201,13 @@
         }
       ],
       "source": [
+        "# tokenize smiles\n",
+        "\n",
         "def tokenize_function(example):\n",
         "    return tokenizer(example[\"smiles\"], truncation=True)\n",
         "  \n",
         "tokenized_train_dataset = train_dataset.map(tokenize_function, batched=True)\n",
         "tokenized_test_dataset = test_dataset.map(tokenize_function, batched=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "application/vnd.databricks.v1+cell": {
-          "inputWidgets": {},
-          "nuid": "cf0bd8cc-4795-4c25-b753-97a78866cd37",
-          "showTitle": false,
-          "title": ""
-        },
-        "id": "aOXm0CHgVs5u"
-      },
-      "outputs": [],
-      "source": [
-        "from transformers import DataCollatorWithPadding\n",
-        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer, return_tensors=\"tf\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "iMB3Jorz0vqw"
-      },
-      "outputs": [],
-      "source": [
-        "batch_size=4"
       ]
     },
     {
@@ -286,6 +224,12 @@
       },
       "outputs": [],
       "source": [
+        "batch_size=4\n",
+        "\n",
+        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer, return_tensors=\"tf\")\n",
+        "\n",
+        "# to tensorflow dataset\n",
+        "\n",
         "tf_train_dataset = tokenized_train_dataset.to_tf_dataset(\n",
         "    columns=[\"attention_mask\", \"input_ids\"],\n",
         "    label_cols=[\"P1\"],\n",
@@ -301,99 +245,6 @@
         "    collate_fn=data_collator,\n",
         "    batch_size=8,\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "C7MCsaUiSTHL"
-      },
-      "outputs": [],
-      "source": [
-        "for batch in tf_train_dataset:\n",
-        "    break"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WoGURdURSY3F",
-        "outputId": "ae99ac33-f5f7-406a-cefc-d1bf4f6ba7cb"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "({'attention_mask': <tf.Tensor: shape=(4, 46), dtype=int64, numpy=\n",
-              "  array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "          1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "          0, 0],\n",
-              "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "          0, 0],\n",
-              "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "          0, 0],\n",
-              "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "          1, 1]])>, 'input_ids': <tf.Tensor: shape=(4, 46), dtype=int64, numpy=\n",
-              "  array([[  0, 267,  21, 263, 320,  39,  33,  50,  19, 270, 264,  51,  13,\n",
-              "          309,  22,  71,  12,  39,  13, 265,  23, 269, 321,  13,  83,  21,\n",
-              "            2,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,\n",
-              "            1,   1,   1,   1,   1,   1,   1],\n",
-              "         [  0, 434,  21, 263,  12,  39,  22,  12,  39,  13, 262, 264,  51,\n",
-              "           13, 270,  22,  33,  51,  13, 261,  21,   2,   1,   1,   1,   1,\n",
-              "            1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,   1,\n",
-              "            1,   1,   1,   1,   1,   1,   1],\n",
-              "         [  0,  51,  33,  39,  12, 277,  21, 263,  12,  50,  22, 305,  22,\n",
-              "           13, 261,  21,  13,  39,  21,  12,  55, 264,  51, 285,  51,  13,\n",
-              "           71,  22, 269,  22,  13, 262,  21,   2,   1,   1,   1,   1,   1,\n",
-              "            1,   1,   1,   1,   1,   1,   1],\n",
-              "         [  0, 284,  21, 263, 273,  82,  22, 265,  12,  39, 264,  51,  13,\n",
-              "          277,  23, 263,  12, 274,  13,  71,  12, 274,  13,  71,  23,  13,\n",
-              "           71,  23,  71,  24, 269,  24,  82,  12,  39,  13,  71,  23,  71,\n",
-              "           22,  33,  51,  13, 261,  21,   2]])>},\n",
-              " <tf.Tensor: shape=(4,), dtype=int64, numpy=array([1, 1, 1, 1])>)"
-            ]
-          },
-          "execution_count": 23,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "batch"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QImaaYGVZlCy",
-        "outputId": "0cc92364-3593-4f0f-a63e-e7540b861810"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<PrefetchDataset element_spec=({'input_ids': TensorSpec(shape=(4, None), dtype=tf.int64, name=None), 'attention_mask': TensorSpec(shape=(4, None), dtype=tf.int64, name=None)}, TensorSpec(shape=(4,), dtype=tf.int64, name=None))>"
-            ]
-          },
-          "execution_count": 77,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "tf_train_dataset"
       ]
     },
     {
@@ -443,14 +294,6 @@
         }
       ],
       "source": [
-        "from tensorflow.keras.optimizers.schedules import PolynomialDecay\n",
-        "from tensorflow.keras.optimizers import Adam\n",
-        "import tensorflow as tf\n",
-        "\n",
-        "# faut-il inverser 1 et 0?\n",
-        "# oversampling?\n",
-        "# rajouter des metrics\n",
-        "# experiment.test?\n",
         "\n",
         "num_epochs = 15\n",
         "checkpoint = \"mrm8488/chEMBL26_smiles_v2\"\n",
